# decentralized-edge-faas

./: Cargo.toml  README.md  openfaas_config_template.yml
src/: data_structures.rs  functions_service.rs  main.rs  model.rs  network.rs  openfaas.rs
src/http_server/: handlers.rs  mod.rs  routes.rs  server.rs
